Improved output, TBB detection, CUDA configuration. Potentially fixed Iridis issue with broken CXX_ABI in OpenCV 4.5.3

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.18)
+cmake_minimum_required(VERSION 3.18)  # future releases may require 3.20. Improved FindModules for GDAL, CGAL, TBB & CUDA toolkit
 
 if(NOT DEFINED CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Release CACHE STRING
@@ -15,12 +15,35 @@ if (${FORCE_COLORED_OUTPUT})
     endif ()
 endif ()
 
+if(NOT WIN32)
+  string(ASCII 27 Esc)
+  set(ColourReset "${Esc}[m")
+  set(ColourBold  "${Esc}[1m")
+  set(Red         "${Esc}[31m")
+  set(Green       "${Esc}[32m")
+  set(Yellow      "${Esc}[33m")
+  set(Blue        "${Esc}[34m")
+  set(Magenta     "${Esc}[35m")
+  set(Cyan        "${Esc}[36m")
+  set(White       "${Esc}[37m")
+  set(BoldRed     "${Esc}[1;31m")
+  set(BoldGreen   "${Esc}[1;32m")
+  set(BoldYellow  "${Esc}[1;33m")
+  set(BoldBlue    "${Esc}[1;34m")
+  set(BoldMagenta "${Esc}[1;35m")
+  set(BoldCyan    "${Esc}[1;36m")
+  set(BoldWhite   "${Esc}[1;37m")
+endif()
+
+message ("${Cyan}")
+
 # Define project name
 project(lad_project)
-set(CMAKE_CXX_STANDARD 11)          # verify that the compiler supports C++11, as some targets could reversely fallback to c++14
+set(CMAKE_CXX_STANDARD 17)          # verify that the compiler supports C++17, as some targets could reversely fallback to c++14
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread -mavx2")
+# GNU compiler flags. If you are using a different compiler, you may need to change these flags
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -pthread -mavx2")
 # Additional flags for vectorized/multithread profiling and debugging
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp -O3  -shared-libgcc")
 
@@ -31,16 +54,36 @@ if(OPENMP_FOUND)
   set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
 endif()
 
+# find_package(CUDAToolkit  11.4  REQUIRED)
+#  IF(CMAKE_VERSION VERSION_GREATER_EQUAL "3.17.0") 
+#    find_package(CUDAToolkit) 
+#  ELSE() 
+#    include(${CMAKE_CURRENT_LIST_DIR}/CudaToolkit.cmake) 
+#  ENDIF() 
+
+find_package(CUDA REQUIRED) # FindCUDA is deprecated, future releases will use find_package(CUDAToolkit)
+if(CUDA_FOUND)
+  include(FindCUDA)
+  # If the package has been found, several variables will
+  # be set, you can find the full list with descriptions
+  # in the CUDAConfig.cmake file.
+  # Print some message showing some of them
+  message("${BoldGreen}" "CUDA library status: ${ColourReset}")
+  message(STATUS "    toolkit root dir: ${CUDA_TOOLKIT_ROOT_DIR}")
+  message(STATUS "    version: ${CUDA_VERSION}")
+  message(STATUS "    libraries: ${CUDA_LIBRARIES}")
+  message(STATUS "    include path: ${CUDA_INCLUDE_DIRS}")
+endif(CUDA_FOUND)
+
 # Find OpenCV, you may need to set OpenCV_DIR variable
 # to the absolute path to the directory containing OpenCVConfig.cmake file
-find_package(OpenCV 4   REQUIRED core imgproc
-                        
+find_package(OpenCV 4   REQUIRED 
                         PATHS /usr/local /local/software/opencv/4.5.3
                         NO_DEFAULT_PATH)
 
 # If the package has been found, several variables will be set, you can find the full list with descriptions
 # in the OpenCVConfig.cmake file.
-message(STATUS "OpenCV library status:")
+message("${BoldGreen}" "OpenCV library status:" "${ColourReset}")
 message(STATUS "    version: ${OpenCV_VERSION}")
 message(STATUS "    libraries: ${OpenCV_LIBS}")
 message(STATUS "    include path: ${OpenCV_INCLUDE_DIRS}")
@@ -49,43 +92,44 @@ message(STATUS "    include path: ${OpenCV_INCLUDE_DIRS}")
     # export GDAL_DIR=/local/software/gdal/3.0.1/
     # On Iridis5- hinting to /local/software path using GDAL_DIR ENV
 find_package(GDAL MODULE REQUIRED) # Newest releases of GDAL provide VERSION information
-message(STATUS "GDAL library status:")
+message("${BoldGreen}" "GDAL library status:" "${ColourReset}")
 message(STATUS "    version: ${GDAL_VERSION}") # FindGDAL.cmake does not provide VERSION info for cmake < 3.13
 message(STATUS "    libraries: ${GDAL_LIBRARY}")
 message(STATUS "    include path: ${GDAL_INCLUDE_DIRS}")
-
-#find_package(PCL REQUIRED COMPONENTS common io) #not required yet
 
 # Boost and its components
 find_package( Boost REQUIRED )
 
 if ( NOT Boost_FOUND )
-  message(STATUS "This project requires the Boost library, and will not be compiled.")
+  message(WARNING "This project requires the Boost library, and will not be compiled.")
   return()  
 endif()
 
 find_package(CGAL REQUIRED)
-# find_package(CGAL REQUIRED OPTIONAL_COMPONENTS Qt5)
-
-# if(CGAL_Qt5_FOUND)
-#   #required to use basic_viewer
-#   add_definitions(-DCGAL_USE_BASIC_VIEWER -DQT_NO_KEYWORDS)
-# endif()
-
 if ( NOT CGAL_FOUND )
-  message(STATUS "This project requires the CGAL library, and will not be compiled.")
+  message(WARNING "This project requires the CGAL library, and will not be compiled.")
   return()  
 endif()
 
-message(STATUS "CGAL library status:")
+message("${BoldGreen}" "CGAL library status:" "${ColourReset}")
 message(STATUS "    libraries: ${CGAL_LIBRARY}")
 message(STATUS "    include path: ${CGAL_INCLUDE_DIR}")
-
-set(TBB_VERSION "2021.2") # to deal with broken TBBFind.cmake from CGAL
-find_package( TBB)
-
 # include helper file
 include( ${CGAL_USE_FILE} )
+
+# set(TBB_VERSION "2021.2") # to deal with broken TBBFind.cmake from CGAL
+find_package(TBB REQUIRED tbb)  # technically, it is possible not to use TBB
+if ( NOT TBB_FOUND )
+  message(WARNING "This project requires the TBB library, and will not be compiled.")
+  return()
+else()
+  message("${BoldGreen}" "TBB library status:" "${ColourReset}")
+  message(STATUS "    version: ${TBB_VERSION_MAJOR}.${TBB_VERSION_MINOR}")
+  message(STATUS "    libraries: ${TBB_LIBRARY}")
+  message(STATUS "    include path: ${TBB_INCLUDE_DIR}")
+endif()
+
+
 
 # Add submodule as external/geotiff subdirectory. But we do not want to trigger its own CMake chain, so we just set the path
 #add_subdirectory(external/geotiff)
@@ -93,7 +137,6 @@ set (GEOTIFF_MODULE external/geotiff)
 
 # Greedy include of all headers
 file(GLOB PROJECT_HEADERS include/*.h include/*.hpp)
-
 
 set (YAML_DIR $ENV{HOME}/local)
 
@@ -106,13 +149,13 @@ include_directories(BEFORE ../include
           
 include_directories(AFTER ${YAML_DIR}/include)
 
+# Iridis5 OpenCV installation (4.5.3) was broken, wrong CXX_ABI signature. Appears to have been solved
 if (TARGET_IRIDIS)
     message (WARNING "Iridis specific build")
     add_definitions (-DIRIDIS_BUILD)
     add_definitions (-DTARGET_IRIDIS)
     # This invocation flag was added to enable Iridis5 specific patch for broken OpenCV installation. Libs are missing
 endif()
-
 
 # Retrieve git commit information, forward it as compiler flags so they can be used during building time
 exec_program(
@@ -172,17 +215,11 @@ add_executable(img.resample   src/img.resample.cpp
 # message (STATUS Yaml-cpp: ${yaml-cpp})
 
 find_library (YAML_LIB yaml-cpp PATHS ${YAML_DIR}/lib64)
-
 message (STATUS "Using yaml-cpp libraries from:" ${YAML_LIB})
-# message (WARNING "    libraries: ${OpenCV_LIBS}")
 
-# message (STATUS "Searching for yaml-cpp in " ${YAML_DIR})
-# target_include_directories (mad_test PUBLIC ${YAML_DIR}/include)
-
-
-target_compile_options(mad_test     PUBLIC -std=c++11 -mavx)
-target_compile_options(tiff2png     PUBLIC -std=c++11 -mavx)
-target_compile_options(img.resample PUBLIC -std=c++11 -mavx)
+target_compile_options(mad_test     PUBLIC -std=c++17 -mavx2) # the global flags may already have been set with std=c++17 
+target_compile_options(tiff2png     PUBLIC -std=c++17 -mavx2)
+target_compile_options(img.resample PUBLIC -std=c++17 -mavx2)
 target_link_libraries(tiff2png      ${OpenCV_LIBS} ${GDAL_LIBRARY} ${YAML_LIB})
 target_link_libraries(tiff2rugosity ${OpenCV_LIBS} ${GDAL_LIBRARY} ${YAML_LIB})
 target_link_libraries(img.resample  ${OpenCV_LIBS} ${GDAL_LIBRARY} ${YAML_LIB})
